1.修改正文布局的宽度；2.修改左侧目录的字体大小；3.修改正文内目录的字体大小；4.修改正文的基准字体大小；5.修改正文中的引用块的字体大小

--- a/docs/.vuepress/styles/palette.scss
+++ b/docs/.vuepress/styles/palette.scss
@@ -1,3 +1,5 @@
 $theme-color: #2980B9;
 $sidebar-width: 20rem; // 修改左侧目录列表的宽度
 $sidebar-mobile-width: 16rem;
+$content-width: 900px; // 正文的页宽
+$line-numbers-width: 2.5rem; // 代码框中显示行号的区域宽度
