--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -88,4 +88,12 @@ node_modules\vuepress-theme-hope\lib\client\module\sidebar\styles\
 }
 
 
+// 右上角搜索栏的输入框的宽度
+.search-box input {
+    width: 15rem;
+}
 
+// 搜索栏的结果框的宽度
+.search-box .suggestions {
+    width: max-content; // 设置为最长行的宽度
+}
