--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -90,8 +90,29 @@ node_modules\vuepress-theme-hope\lib\client\module\sidebar\styles\
 
 // 右上角搜索栏的输入框的宽度
 .search-box input {
-    width: 12rem;
+    width: 10rem;
 }
+
+// @media (min-width: 1500px) { // 设备宽度 >=1500px 的设备
+//     .search-box input {
+//         width: 12rem;
+//     }
+// }
+
+// @media (max-width: 720px) { // 设备宽度 <=720px 的设备
+//   .search-box input {
+//     width: 0;
+//   }
+//   .search-box input:focus {
+//     width: 10rem;
+//   }
+// }
+  
+// @media (max-width: 420px) { // 设备宽度 <=420px 的设备
+//   .search-box input:focus {
+//     width: 8rem;
+//   }
+// }
 
 // 搜索栏的结果框的宽度
 .search-box .suggestions {
