滑动方式从 smooth 修改为 auto，解决定位失败的问题

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -184,3 +184,9 @@ svg .loopText, svg .loopText>tspan {
     font-size: 12px!important;
     fill: red!important;
 }
+
+:root {
+    @media (prefers-reduced-motion: no-preference) {
+        scroll-behavior: auto;
+    }
+}
