Android 新特性；修改搜索框尺寸

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -93,9 +93,9 @@ node_modules\vuepress-theme-hope\lib\client\module\sidebar\styles\
 
 
 // 右上角搜索栏的输入框的宽度
-.search-box input {
-    width: 10rem;
-}
+// .search-box input {
+//     width: 10rem;
+// }
 
 // @media (min-width: 1500px) { // 设备宽度 >=1500px 的设备
 //     .search-box input {
